// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sdk > getParachainBalances > on 'Centrifuge' for address: '4fAKSBMGVT9jt1jkuJvXgvMbmqV2BuspFWWEm…' > should get expected balances 1`] = `
[
  r {
    "amount": 570000000000000000n,
    "decimals": 18,
    "key": "cfg",
    "originSymbol": "CFG",
    "symbol": "CFG",
  },
]
`;

exports[`sdk > getParachainBalances > on 'Centrifuge' for address: '5FtGz8bgoCQ6pNAYLWCfxKx9ekLnX1ewP9q2T…' > should get expected balances 1`] = `
[
  r {
    "amount": 570000000000000000n,
    "decimals": 18,
    "key": "cfg",
    "originSymbol": "CFG",
    "symbol": "CFG",
  },
]
`;

exports[`sdk > getParachainBalances > on 'Hydration Alphanet' for address: '5FtGz8bgoCQ6pNAYLWCfxKx9ekLnX1ewP9q2T…' > should get expected balances 1`] = `
[
  r {
    "amount": 178046239082538836n,
    "decimals": 18,
    "key": "ftmwh",
    "originSymbol": "FTM.wh",
    "symbol": "FTM.wh",
  },
  r {
    "amount": 0n,
    "decimals": 6,
    "key": "usdcwh",
    "originSymbol": "USDC.Wh",
    "symbol": "USDC.Wh",
  },
  r {
    "amount": 0n,
    "decimals": 18,
    "key": "dev",
    "originSymbol": "DEV",
    "symbol": "DEV",
  },
  r {
    "amount": 3000000000000n,
    "decimals": 12,
    "key": "hdx",
    "originSymbol": "HDX",
    "symbol": "HDX",
  },
]
`;

exports[`sdk > getParachainBalances > on 'Hydration Alphanet' for address: '7MR8Qxy9sJmN6bfHMggAtFY5DwLxfrssLuTnP…' > should get expected balances 1`] = `
[
  r {
    "amount": 178046239082538836n,
    "decimals": 18,
    "key": "ftmwh",
    "originSymbol": "FTM.wh",
    "symbol": "FTM.wh",
  },
  r {
    "amount": 0n,
    "decimals": 6,
    "key": "usdcwh",
    "originSymbol": "USDC.Wh",
    "symbol": "USDC.Wh",
  },
  r {
    "amount": 0n,
    "decimals": 18,
    "key": "dev",
    "originSymbol": "DEV",
    "symbol": "DEV",
  },
  r {
    "amount": 3000000000000n,
    "decimals": 12,
    "key": "hdx",
    "originSymbol": "HDX",
    "symbol": "HDX",
  },
]
`;

exports[`sdk > getParachainBalances > on 'Hydration' for address: '5FtGz8bgoCQ6pNAYLWCfxKx9ekLnX1ewP9q2T…' > should get expected balances 1`] = `
[
  r {
    "amount": 37000000000000n,
    "decimals": 18,
    "key": "weth",
    "originSymbol": "WETH",
    "symbol": "WETH",
  },
  r {
    "amount": 120n,
    "decimals": 8,
    "key": "wbtc",
    "originSymbol": "WBTC",
    "symbol": "WBTC",
  },
  r {
    "amount": 0n,
    "decimals": 6,
    "key": "usdtwh",
    "originSymbol": "USDT.Wh",
    "symbol": "USDT.Wh",
  },
  r {
    "amount": 0n,
    "decimals": 6,
    "key": "usdcwh",
    "originSymbol": "USDC.Wh",
    "symbol": "USDC.Wh",
  },
  r {
    "amount": 0n,
    "decimals": 18,
    "key": "dai",
    "originSymbol": "DAI",
    "symbol": "DAI",
  },
  r {
    "amount": 0n,
    "decimals": 18,
    "key": "glmr",
    "originSymbol": "GLMR",
    "symbol": "GLMR",
  },
  r {
    "amount": 1000000000000n,
    "decimals": 12,
    "key": "hdx",
    "originSymbol": "HDX",
    "symbol": "HDX",
  },
]
`;

exports[`sdk > getParachainBalances > on 'Hydration' for address: '7MR8Qxy9sJmN6bfHMggAtFY5DwLxfrssLuTnP…' > should get expected balances 1`] = `
[
  r {
    "amount": 37000000000000n,
    "decimals": 18,
    "key": "weth",
    "originSymbol": "WETH",
    "symbol": "WETH",
  },
  r {
    "amount": 120n,
    "decimals": 8,
    "key": "wbtc",
    "originSymbol": "WBTC",
    "symbol": "WBTC",
  },
  r {
    "amount": 0n,
    "decimals": 6,
    "key": "usdtwh",
    "originSymbol": "USDT.Wh",
    "symbol": "USDT.Wh",
  },
  r {
    "amount": 0n,
    "decimals": 6,
    "key": "usdcwh",
    "originSymbol": "USDC.Wh",
    "symbol": "USDC.Wh",
  },
  r {
    "amount": 0n,
    "decimals": 18,
    "key": "dai",
    "originSymbol": "DAI",
    "symbol": "DAI",
  },
  r {
    "amount": 0n,
    "decimals": 18,
    "key": "glmr",
    "originSymbol": "GLMR",
    "symbol": "GLMR",
  },
  r {
    "amount": 1000000000000n,
    "decimals": 12,
    "key": "hdx",
    "originSymbol": "HDX",
    "symbol": "HDX",
  },
]
`;

exports[`sdk > getParachainBalances > on 'Moonbase Alpha' for address: '0x4E82143Af671Cc8201Bc7efCBbCED3A69e8…' > should get expected balances 1`] = `
[
  r {
    "amount": 0n,
    "decimals": 18,
    "key": "agng",
    "originSymbol": "AGNG",
    "symbol": "AGNG",
  },
  r {
    "amount": 0n,
    "decimals": 12,
    "key": "hdx",
    "originSymbol": "HDX",
    "symbol": "HDX",
  },
  r {
    "amount": 1234567890000000000n,
    "decimals": 18,
    "key": "ftmwh",
    "originSymbol": "FTM.wh",
    "symbol": "FTM.wh",
  },
  r {
    "amount": 10000n,
    "decimals": 6,
    "key": "usdcwh",
    "originSymbol": "USDC.Wh",
    "symbol": "USDC.Wh",
  },
  r {
    "amount": 0n,
    "decimals": 12,
    "key": "unit",
    "originSymbol": "Unit",
    "symbol": "Unit",
  },
  r {
    "amount": 0n,
    "decimals": 10,
    "key": "tur",
    "originSymbol": "TUR",
    "symbol": "TUR",
  },
  r {
    "amount": 0n,
    "decimals": 18,
    "key": "tt1",
    "originSymbol": "TT1",
    "symbol": "TT1",
  },
  r {
    "amount": 0n,
    "decimals": 12,
    "key": "pica",
    "originSymbol": "PICA",
    "symbol": "PICA",
  },
  r {
    "amount": 0n,
    "decimals": 6,
    "key": "atom",
    "originSymbol": "ATOM",
    "symbol": "ATOM",
  },
  r {
    "amount": 0n,
    "decimals": 12,
    "key": "otp",
    "originSymbol": "OTP",
    "symbol": "OTP",
  },
  r {
    "amount": 0n,
    "decimals": 12,
    "key": "ampe",
    "originSymbol": "AMPE",
    "symbol": "AMPE",
  },
  r {
    "amount": 10000000000000000n,
    "decimals": 18,
    "key": "alan",
    "originSymbol": "ALAN",
    "symbol": "ALAN",
  },
  r {
    "amount": 6543210000000000000n,
    "decimals": 18,
    "key": "dev",
    "originSymbol": "DEV",
    "symbol": "DEV",
  },
]
`;

exports[`sdk > getParachainBalances > on 'Moonbase Beta' for address: '0x4E82143Af671Cc8201Bc7efCBbCED3A69e8…' > should get expected balances 1`] = `
[
  r {
    "amount": 1100000000000000000n,
    "decimals": 18,
    "key": "alan",
    "originSymbol": "ALAN",
    "symbol": "ALAN",
  },
  r {
    "amount": 1100000000000000000n,
    "decimals": 18,
    "key": "dev",
    "originSymbol": "DEV",
    "symbol": "DEV",
  },
]
`;

exports[`sdk > getParachainBalances > on 'Moonbeam' for address: '0x4E82143Af671Cc8201Bc7efCBbCED3A69e8…' > should get expected balances 1`] = `
[
  r {
    "amount": 0n,
    "decimals": 6,
    "key": "axlusdc",
    "originSymbol": "axlUSDC",
    "symbol": "axlUSDC",
  },
  r {
    "amount": 0n,
    "decimals": 18,
    "key": "peaq",
    "originSymbol": "PEAQ",
    "symbol": "PEAQ",
  },
  r {
    "amount": 0n,
    "decimals": 12,
    "key": "bncs",
    "originSymbol": "BNCS",
    "symbol": "BNCS",
  },
  r {
    "amount": 0n,
    "decimals": 10,
    "key": "sub",
    "originSymbol": "SUB",
    "symbol": "SUB",
  },
  r {
    "amount": 0n,
    "decimals": 10,
    "key": "ztg",
    "originSymbol": "ZTG",
    "symbol": "ZTG",
  },
  r {
    "amount": 0n,
    "decimals": 18,
    "key": "fil",
    "originSymbol": "FIL",
    "symbol": "FIL",
  },
  r {
    "amount": 0n,
    "decimals": 18,
    "key": "weth",
    "originSymbol": "WETH",
    "symbol": "WETH",
  },
  r {
    "amount": 0n,
    "decimals": 8,
    "key": "wbtc",
    "originSymbol": "WBTC",
    "symbol": "WBTC",
  },
  r {
    "amount": 0n,
    "decimals": 18,
    "key": "vmanta",
    "originSymbol": "vMANTA",
    "symbol": "vMANTA",
  },
  r {
    "amount": 0n,
    "decimals": 18,
    "key": "vglmr",
    "originSymbol": "vGLMR",
    "symbol": "vGLMR",
  },
  r {
    "amount": 0n,
    "decimals": 18,
    "key": "vfil",
    "originSymbol": "vFIL",
    "symbol": "vFIL",
  },
  r {
    "amount": 0n,
    "decimals": 10,
    "key": "vdot",
    "originSymbol": "vDOT",
    "symbol": "vDOT",
  },
  r {
    "amount": 0n,
    "decimals": 18,
    "key": "vastr",
    "originSymbol": "vASTR",
    "symbol": "vASTR",
  },
  r {
    "amount": 0n,
    "decimals": 6,
    "key": "usdtwh",
    "originSymbol": "USDT.Wh",
    "symbol": "USDT.Wh",
  },
  r {
    "amount": 0n,
    "decimals": 6,
    "key": "usdcwh",
    "originSymbol": "USDC.Wh",
    "symbol": "USDC.Wh",
  },
  r {
    "amount": 0n,
    "decimals": 18,
    "key": "dai",
    "originSymbol": "DAI",
    "symbol": "DAI",
  },
  r {
    "amount": 0n,
    "decimals": 12,
    "key": "hdx",
    "originSymbol": "HDX",
    "symbol": "HDX",
  },
  r {
    "amount": 0n,
    "decimals": 18,
    "key": "apillon",
    "originSymbol": "NCTR",
    "symbol": "NCTR",
  },
  r {
    "amount": 0n,
    "decimals": 10,
    "key": "wifd",
    "originSymbol": "WIFD",
    "symbol": "WIFD",
  },
  r {
    "amount": 0n,
    "decimals": 10,
    "key": "stink",
    "originSymbol": "STINK",
    "symbol": "STINK",
  },
  r {
    "amount": 0n,
    "decimals": 10,
    "key": "ded",
    "originSymbol": "DED",
    "symbol": "DED",
  },
  r {
    "amount": 0n,
    "decimals": 10,
    "key": "pink",
    "originSymbol": "PINK",
    "symbol": "PINK",
  },
  r {
    "amount": 0n,
    "decimals": 6,
    "key": "usdc",
    "originSymbol": "USDC",
    "symbol": "USDC",
  },
  r {
    "amount": 0n,
    "decimals": 6,
    "key": "usdt",
    "originSymbol": "USDT",
    "symbol": "USDT",
  },
  r {
    "amount": 0n,
    "decimals": 18,
    "key": "ring",
    "originSymbol": "RING",
    "symbol": "RING",
  },
  r {
    "amount": 0n,
    "decimals": 12,
    "key": "pha",
    "originSymbol": "PHA",
    "symbol": "PHA",
  },
  r {
    "amount": 0n,
    "decimals": 12,
    "key": "pen",
    "originSymbol": "PEN",
    "symbol": "PEN",
  },
  r {
    "amount": 0n,
    "decimals": 12,
    "key": "neuro",
    "originSymbol": "NEURO",
    "symbol": "NEURO",
  },
  r {
    "amount": 0n,
    "decimals": 11,
    "key": "nodl",
    "originSymbol": "NODL",
    "symbol": "NODL",
  },
  r {
    "amount": 0n,
    "decimals": 18,
    "key": "manta",
    "originSymbol": "MANTA",
    "symbol": "MANTA",
  },
  r {
    "amount": 0n,
    "decimals": 10,
    "key": "ldot",
    "originSymbol": "LDOT",
    "symbol": "LDOT",
  },
  r {
    "amount": 0n,
    "decimals": 10,
    "key": "intr",
    "originSymbol": "INTR",
    "symbol": "INTR",
  },
  r {
    "amount": 0n,
    "decimals": 8,
    "key": "ibtc",
    "originSymbol": "IBTC",
    "symbol": "IBTC",
  },
  r {
    "amount": 330000000n,
    "decimals": 10,
    "key": "dot",
    "originSymbol": "DOT",
    "symbol": "DOT",
  },
  r {
    "amount": 0n,
    "decimals": 18,
    "key": "cfg",
    "originSymbol": "CFG",
    "symbol": "CFG",
  },
  r {
    "amount": 0n,
    "decimals": 12,
    "key": "bnc",
    "originSymbol": "BNC",
    "symbol": "BNC",
  },
  r {
    "amount": 0n,
    "decimals": 12,
    "key": "aseed",
    "originSymbol": "aSEED",
    "symbol": "aSEED",
  },
  r {
    "amount": 0n,
    "decimals": 18,
    "key": "astr",
    "originSymbol": "ASTR",
    "symbol": "ASTR",
  },
  r {
    "amount": 0n,
    "decimals": 12,
    "key": "aca",
    "originSymbol": "ACA",
    "symbol": "ACA",
  },
  r {
    "amount": 1330000000000000000n,
    "decimals": 18,
    "key": "glmr",
    "originSymbol": "GLMR",
    "symbol": "GLMR",
  },
]
`;

exports[`sdk > getParachainBalances > on 'peaq Alphanet' for address: '5FtGz8bgoCQ6pNAYLWCfxKx9ekLnX1ewP9q2T…' > should get expected balances 1`] = `
[
  r {
    "amount": 0n,
    "decimals": 18,
    "key": "ftmwh",
    "originSymbol": "FTM.wh",
    "symbol": "FTM.wh",
  },
  r {
    "amount": 0n,
    "decimals": 18,
    "key": "dev",
    "originSymbol": "DEV",
    "symbol": "DEV",
  },
  r {
    "amount": 1223300000000000000n,
    "decimals": 18,
    "key": "agng",
    "originSymbol": "AGNG",
    "symbol": "AGNG",
  },
]
`;

exports[`sdk > getParachainBalances > on 'peaq EVM Alphanet' for address: '0x4E82143Af671Cc8201Bc7efCBbCED3A69e8…' > should get expected balances 1`] = `
[
  r {
    "amount": 330000000000000000n,
    "decimals": 18,
    "key": "dev",
    "originSymbol": "DEV",
    "symbol": "DEV",
  },
  r {
    "amount": 123000000000000000n,
    "decimals": 18,
    "key": "ftmwh",
    "originSymbol": "FTM.wh",
    "symbol": "FTM.wh",
  },
]
`;

exports[`sdk > getParachainBalances > on 'peaq EVM' for address: '0x4E82143Af671Cc8201Bc7efCBbCED3A69e8…' > should get expected balances 1`] = `
[
  r {
    "amount": 0n,
    "decimals": 6,
    "key": "usdtwh",
    "originSymbol": "USDT.Wh",
    "symbol": "USDT.Wh",
  },
  r {
    "amount": 0n,
    "decimals": 18,
    "key": "weth",
    "originSymbol": "WETH",
    "symbol": "WETH",
  },
  r {
    "amount": 0n,
    "decimals": 8,
    "key": "wbtc",
    "originSymbol": "WBTC",
    "symbol": "WBTC",
  },
  r {
    "amount": 0n,
    "decimals": 18,
    "key": "dai",
    "originSymbol": "DAI",
    "symbol": "DAI",
  },
  r {
    "amount": 0n,
    "decimals": 6,
    "key": "usdcwh",
    "originSymbol": "USDC.Wh",
    "symbol": "USDC.Wh",
  },
  r {
    "amount": 0n,
    "decimals": 18,
    "key": "glmr",
    "originSymbol": "GLMR",
    "symbol": "GLMR",
  },
]
`;

exports[`sdk > getParachainBalances > on 'peaq' for address: '5FtGz8bgoCQ6pNAYLWCfxKx9ekLnX1ewP9q2T…' > should get expected balances 1`] = `
[
  r {
    "amount": 0n,
    "decimals": 6,
    "key": "usdtwh",
    "originSymbol": "USDT.Wh",
    "symbol": "USDT.Wh",
  },
  r {
    "amount": 0n,
    "decimals": 18,
    "key": "weth",
    "originSymbol": "WETH",
    "symbol": "WETH",
  },
  r {
    "amount": 0n,
    "decimals": 8,
    "key": "wbtc",
    "originSymbol": "WBTC",
    "symbol": "WBTC",
  },
  r {
    "amount": 0n,
    "decimals": 18,
    "key": "dai",
    "originSymbol": "DAI",
    "symbol": "DAI",
  },
  r {
    "amount": 0n,
    "decimals": 6,
    "key": "usdcwh",
    "originSymbol": "USDC.Wh",
    "symbol": "USDC.Wh",
  },
  r {
    "amount": 0n,
    "decimals": 18,
    "key": "glmr",
    "originSymbol": "GLMR",
    "symbol": "GLMR",
  },
  r {
    "amount": 1313000000000000000n,
    "decimals": 18,
    "key": "peaq",
    "originSymbol": "PEAQ",
    "symbol": "PEAQ",
  },
]
`;
